--- a/src/app/dashboard-page/dashboard-pages/home-dashboard-page/pie-chart-dashboard/pie-chart-dashboard.component.html
+++ b/src/app/dashboard-page/dashboard-pages/home-dashboard-page/pie-chart-dashboard/pie-chart-dashboard.component.html
@@ -1,5 +1,5 @@
-<div [hidden]="!chart">
- <canvas id="user-doughnut-chart" height='192px'></canvas>   
+<div class="chart" [hidden]="!chart" [ngClass]="{ zero: zeroDeals }">
+ <canvas id="user-doughnut-chart" height='192px' ></canvas>   
 </div>
 
 
