--- a/src/app/dashboard-page/dashboard-pages/home-dashboard-page/user-dashboard/user-dashboard.component.scss
+++ b/src/app/dashboard-page/dashboard-pages/home-dashboard-page/user-dashboard/user-dashboard.component.scss
@@ -3,6 +3,7 @@
   flex-wrap: wrap;
   justify-content: space-between;
   height: 100%;
+  overflow: auto;
 }
 .main-statistic {
   display: flex;
@@ -63,7 +64,7 @@
       border-radius: 4px;
     }
     h5.title {
-      font-family: Source Sans Pro;
+      font-family: Source Sans Pro, sans-serif;
       font-style: normal;
       font-weight: normal;
       font-size: 15px;
@@ -98,6 +99,82 @@
           max-width: 210px;
         }
       }
+    }
+    .freelancer-status {
+      height: 100%;
+      display: flex;
+      flex-direction: column;
+      .chart-body {
+        display: flex;
+        flex-direction: column;
+        height: 100%;
+        box-sizing: border-box;
+      }
+      .status {
+        padding: 37px 20px 30px;
+        p {
+          font-family: Source Sans Pro, sans-serif;
+          font-style: normal;
+          font-weight: normal;
+          font-size: 16px;
+          line-height: 22px;
+          color: #4E5051;
+          padding: 0;
+          &:first-of-type {
+            margin-bottom: 16px;
+            .work-status {
+              font-family: Source Sans Pro, sans-serif;
+              font-style: normal;
+              font-weight: 600;
+              font-size: 13px;
+              line-height: 16px;
+              text-transform: uppercase;
+              &.off {
+                color: #FF647C;
+              }
+              &.on {
+                color: #5DDFA9;
+              }
+            }
+          }
+          margin-bottom: 10px;
+          margin-top: 0;
+          &:not(:first-of-type) {
+            span {
+                font-weight: 600;
+                font-size: 16px;
+                line-height: 22px;
+                color: #4E5051;
+            }
+          }
+          span {
+            padding-left: 9px;
+          }
+        }
+      }
+      .status-toggle-block {
+        background: #F4F7FC;
+        border: 1px solid #DCE0EE;
+        box-sizing: border-box;
+        border-radius: 4px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        height: 100%;
+        p {
+          font-family: Source Sans Pro, sans-serif;
+          font-style: normal;
+          font-weight: normal;
+          font-size: 14px;
+          line-height: 19px;
+          text-transform: uppercase;
+          color: #323C47;
+          padding: 0;
+          margin: 0 0  24px;
+        }
+      }
+
     }
     .request-settings {
       .chart {
@@ -167,7 +244,7 @@
         font-weight: 600;
         font-size: 13px;
         line-height: 16px;
-        padding: 6px 20px;
+        padding: 8px 20px 6px;
         font-family: Source Sans Pro, sans-serif;
         font-style: normal;
         font-weight: 600;
@@ -190,6 +267,9 @@
     }
   }
 }
+.comments {
+  margin-top: 23px;
+}
 .ets {
   width: 19%;
   height: 100%;
@@ -199,4 +279,61 @@
 .achives {
   width: 100%;
   
+}
+
+.switch {
+  display: flex;
+  flex-direction: row;
+
+  & > span {
+    cursor: pointer;
+    font-family: "Source Sans Pro", sans-serif;
+    font-style: normal;
+    font-size: 18px;
+    line-height: 23px;
+    text-align: center;
+    color: #99ACB7;
+    width: 50%;
+    height: 100%;
+    &.active {
+      color: #3C7EEA;
+    }
+  }
+  .swp-btn {
+    background: #ffffff;
+    box-shadow: 0px 7px 20px rgba(0, 0, 0, 0.07);
+    border-radius: 16px;
+    width: 44px;
+    height: 20px;
+    position: relative;
+    margin: 0px 14px;
+    cursor: pointer;
+    span {
+      display: block;
+      width: 16px;
+      height: 16px;
+      border-radius: 50%;
+      background: #3C7EEA;
+      position: absolute;
+      // left: 2px;
+      top: 50%;
+      transform: translateY(-50%);
+      transition: all 0.2s;
+      &.left {
+        left: 5%;
+        // animation: toggleAnimation 0.2s ease-in-out reverse;
+        // right: 0;
+      }
+      &.right {
+        left: 45%;
+        // animation: toggleAnimation 0.5s ease-in-out ;
+      }
+    }
+    &.busy {
+      background: #3C7EEA;
+      span {
+        background: #fff;
+      }
+    }
+  }
 }
