--- a/src/app/dashboard-page/dashboard-pages/home-dashboard-page/user-dashboard/user-dashboard.component.scss
+++ b/src/app/dashboard-page/dashboard-pages/home-dashboard-page/user-dashboard/user-dashboard.component.scss
@@ -23,7 +23,7 @@
     border-radius: 10px;
     display: flex;
     min-width: 256px;
-
+    align-items: center;
     .icon {
       width: 30px;
       height: 30px;
@@ -34,12 +34,12 @@
       margin: 0;
       font-weight: bold;
       font-size: 18px;
-      line-height: 24px;
+      line-height: 14px;
       color: #323C47;
         
       &:last-of-type {
         font-size: 14px;
-        line-height: 24px;
+        line-height: 14px;
         color: #33596E;
         opacity: 0.5;
         font-style: normal;
@@ -269,12 +269,151 @@
 }
 .comments {
   margin-top: 23px;
+
 }
 .ets {
   width: 19%;
   height: 100%;
-  border: 1px solid red;
   margin-right: 17px;
+
+  .statistic {
+    background: #FFFFFF;
+    box-shadow: 0px 0px 21px rgba(128, 152, 213, 0.074983);
+    border-radius: 4px;
+    h5 {
+      font-family: Source Sans Pro, sans-serif;
+      font-style: normal;
+      font-weight: normal;
+      font-size: 15px;
+      line-height: 22px;
+      letter-spacing: 0.15px;
+      font-variant: small-caps;
+      color: #323C47;
+      padding: 22px 20px; 
+      background: #F4F7FC;
+      margin: 0;
+      text-transform: uppercase;
+      margin-bottom: 36px;
+    }
+    .ets-items {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: flex-start;
+      padding: 0 20px;
+      &>div {
+        display: flex;
+        width: 100%;
+        align-items: center;
+        padding-bottom: 20px;
+        &:not(:first-of-type) {
+          margin-top: 20px;
+        }
+        &:not(:last-of-type) {
+          border-bottom: 1px solid #F4F7FC;
+        }
+        img {
+          width: 26px;
+          height: 26px;
+          margin-right: 20px;
+        }
+        &:last-child img {
+          width: 36px;
+          height: 18px;
+        }
+        .description {
+          p {
+            margin: 0;
+            font-family: Source Sans Pro, sans-serif;
+            font-style: normal;
+            font-weight: normal;
+            font-size: 18px;
+            line-height: 23px;
+            color: #323C47;
+            &:last-of-type {
+              font-size: 18px;
+              line-height: 23px;
+              color: #707683;
+              margin-top: 6px;
+            }
+          }
+        }
+      }
+    }
+
+  }
+  .notify {
+    margin-top: 32px;
+    background: #3F60FB;
+    border-radius: 5px;
+    padding: 0 20px 38px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: relative;
+    img {
+      margin-top: 38px;
+    }
+    button.close {
+      position: absolute;
+      top: 14px;
+      right: 15px;
+      width: 16px;
+      height: 16px;
+      position: absolute;
+      cursor: pointer;
+      background: transparent;
+      box-shadow: none;
+      border: none;
+      &:before {
+        position: absolute;
+        content: '\e900';
+        font-family: icomoon;
+        font-size: 16px;
+        color: #CBDEFF;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+      }
+      &:hover:before{
+        color: #fff;
+      }
+    }
+    h5 {
+      margin: 30px 0 25px;
+      font-family: Source Sans Pro, sans-serif;
+      font-style: normal;
+      font-weight: bold;
+      font-size: 17px;
+      line-height: 24px;
+      color: #F2F7FF;
+    }
+    p {
+      font-family: Source Sans Pro, sans-serif;
+      font-style: normal;
+      font-weight: 600;
+      font-size: 14px;
+      line-height: 24px;
+      text-align: center;
+      color: #CBDEFF;
+      margin-bottom: 22px;
+    }
+    .more {
+      font-family: Source Sans Pro, sans-serif;
+      font-style: normal;
+      font-weight: 600;
+      font-size: 13px;
+      line-height: 24px;
+      text-align: center;
+      text-transform: uppercase;
+      color: #CBDEFF;
+      box-shadow: none;
+      background: transparent;
+      border: 1px solid #CBDEFF;
+      border-radius: 3px;
+      cursor: pointer;
+    }
+  }
 }
 .achives {
   width: 100%;
