--- a/src/app/dashboard-page/dashboard-pages/home-dashboard-page/freelacer-achives/freelacer-achives.component.html
+++ b/src/app/dashboard-page/dashboard-pages/home-dashboard-page/freelacer-achives/freelacer-achives.component.html
@@ -21,7 +21,7 @@
                     </span>
                 </div>
                 <div class="line">
-                    <div class="position" [style.width.%]="55">
+                    <div class="position" [style.width.%]="userData.achivments.totalProgress">
                        <span> {{ userData.achivments.totalProgress }} % </span> 
                     </div>
                     
