--- a/src/app/dashboard-page/dashboard-page.component.html
+++ b/src/app/dashboard-page/dashboard-page.component.html
@@ -7,7 +7,7 @@
         </mat-icon>
       </section>
       <section class="type-section">
-        <div class="switch">
+        <div class="switch" *ngIf="user.role_id !== 42">
           <span (click)="changeUserType(1)" [ngClass]="{active: user.role_id === 1}">Фрилансер</span>
           <div class="swp-btn" (click)="changeUserType()">
             <span [ngClass]="{left: user.role_id === 1, right: user.role_id === 2 }"></span>
@@ -34,7 +34,11 @@
       <nav>
         <ng-container *ngFor="let el of dashboardMenu">
           <a class="{{el.class}}"
-            *ngIf="user.role_id === 1 && el.class !== 'catalog' || user.role_id === 2 && el.class !== 'dashboard' && el.class !== 'services' && el.class !== 'dashboard'"
+            *ngIf="user.role_id === 1 && el.class !== 'catalog' || 
+            user.role_id === 2 && el.class !== 'dashboard' && 
+            el.class !== 'services' && el.class !== 'dashboard' ||
+            (user.role_id === 42 && el.class !== 'services' && el.class !== 'settings' && el.class !== 'projects')
+            "
             [routerLink]="el.link | localize" [routerLinkActive]="'active'" (click)="openChat(el.class)"
             [ngClass]="{ 'new-message': newMessage, 'new-work-message': newWorkMessage }"><span>{{ el.title }}</span></a>
         </ng-container>
