--- a/src/app/dashboard-page/dashboard-pages/finace-page/components/admin-finances/admin-finances.component.html
+++ b/src/app/dashboard-page/dashboard-pages/finace-page/components/admin-finances/admin-finances.component.html
@@ -13,5 +13,33 @@
   <section class="chart-wrap">
     <app-admin-chart-canvas></app-admin-chart-canvas>
   </section>
-  <section></section>
+    <section class="paymenst" (clickOutside)="rollPaymentsList()" [ngClass]="paymentsFullSize? 'full-size': ''">
+      <div class="title">
+        <span>история платежей</span>  <span class="open" (click)="unrollPaymentsList()"></span>
+      </div>
+      <div class="paymenst-list">
+        <div class="title">
+          <span class="name">от кого</span>
+          <span class="date">Дата операции</span>
+          <span class="service">Услуга</span>
+          <span class="cash">Сумма</span>
+        </div>
+        <div class="payment-items">
+          <div class="item" *ngFor="let payment of userCashMoves">
+            <div class="name">
+              <div class="ava">
+                <img [src]="payment.user.avatar" alt="">
+              </div>
+              <span> {{ payment.user.name + ' ' +   payment.user.surname }}</span>
+            </div>
+            <div class="date">{{ payment.created_at | dateFormatPipe: 'dd.MM.yyyy' }}</div>
+            <div class="service">{{ payment.OffersTitle }}</div>
+            <div class="cash"><span [ngClass]="{ output: payment.income === 0 }">
+                <ng-container *ngIf="payment.income === 0">-</ng-container> {{ payment.amount }}
+              </span> UAH</div>
+          </div>
+        </div>
+      </div>
+    </section>
+
 </div>
