--- a/src/app/dashboard-page/dashboard-pages/finace-page/components/user-finances/user-finances.component.html
+++ b/src/app/dashboard-page/dashboard-pages/finace-page/components/user-finances/user-finances.component.html
@@ -28,8 +28,6 @@
           </div>
         </div>
       </div>
-
-
     </section>
     <section class="paymenst" (clickOutside)="rollPaymentsList()" [ngClass]="paymentsFullSize? 'full-size': ''">
       <div class="title">
@@ -73,11 +71,11 @@
       <div class="form">
         <div class="operation-type">
           <mat-select [(ngModel)]="transactions.transactionType" [(value)]="transactions.transactionType">
-            <mat-option [value]="null" disabled  >Выберите операцию</mat-option>
-            <mat-option value="'input'">
+            <mat-option [value]="'deffault'" disabled  >Выберите операцию</mat-option>
+            <mat-option [value]="'input'">
               Ввести деньги
             </mat-option>
-            <mat-option value="'output'">
+            <mat-option [value]="'output'">
               Вывести деньги
             </mat-option>
           </mat-select>
