--- a/src/app/shared/modules/admin-chart-canvas/admin-chart-canvas.component.scss
+++ b/src/app/shared/modules/admin-chart-canvas/admin-chart-canvas.component.scss
@@ -8,7 +8,22 @@
 
 .items,
 .chart {
-  width: 72%;
+  width: 76%;
+}
+
+.items.dayschart {
+  width: 100%;
+
+  .day-selected {
+    padding-right: 45px;
+    font-family: Source Sans Pro;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 13px;
+    line-height: 16px;
+    text-transform: uppercase;
+    color: #707683;
+  }
 }
 
 .items {
@@ -149,11 +164,12 @@
 }
 
 .curent-statistic {
-  width: 19%;
-  margin-right: 56px;
+  width: 20.5%;
+  margin-right: 14px;
   display: flex;
   justify-content: center;
   align-items: center;
+  position: relative;
 
   .description {
     border: 1px solid #EBEFF2;
@@ -272,15 +288,18 @@
 // month 
 .chart-month-btns {
   position: relative;
+
   .select {
     position: absolute;
     bottom: -80px;
     right: 0;
   }
 }
+
 .show-select {
   display: flex;
   align-items: baseline;
+
   span {
     position: relative;
     font-family: Source Sans Pro, sans-serif;
@@ -291,14 +310,16 @@
     text-transform: uppercase;
     color: #707683;
     cursor: pointer;
+
     &:first-child {
       margin-right: 32px;
     }
+
     &:last-child {
       width: 14px;
       height: 14px;
       display: block;
-      
+
       &:after {
         position: absolute;
         content: "";
@@ -316,99 +337,75 @@
 
 
 //  calendar
+.wrapper ::ng-deep {
+  dl-date-time-picker {
+    width: 100%;
+    font-family: Source Sans Pro, sans-serif;
 
-.calendar {
-  position: absolute;
-  width: 280px;
-  left: 50%;
-  top: 50%;
-  margin: -145px 0px 0px -140px;
-  background: #fff;
-  border-radius: 4px;
-  overflow: hidden;
-}
-.ui-datepicker-header {
-  height: 50px;
-  line-height: 50px;
-  color: #b0aead;
-  background: #e9e5e3;
-  margin-bottom: 10px;
-}
-.ui-datepicker-prev,
-.ui-datepicker-next {
-  width: 20px;
-  height: 20px;
-  text-indent: 9999px;
-  border: 2px solid #b0aead;
-  border-radius: 100%;
-  cursor: pointer;
-  overflow: hidden;
-  margin-top: 12px;
-}
-.ui-datepicker-prev {
-  float: left;
-  margin-left: 12px;
-}
-.ui-datepicker-prev:after {
-  transform: rotate(45deg);
-  margin: -43px 0px 0px 8px;
-}
-.ui-datepicker-next {
-  float: right;
-  margin-right: 12px;
-}
-.ui-datepicker-next:after {
-  transform: rotate(-135deg);
-  margin: -43px 0px 0px 6px;
-}
-.ui-datepicker-prev:after,
-.ui-datepicker-next:after {
-  content: '';
-  position: absolute;
-  display: block;
-  width: 4px;
-  height: 4px;
-  border-left: 2px solid #b0aead;
-  border-bottom: 2px solid #b0aead;
-}
-.ui-datepicker-prev:hover,
-.ui-datepicker-next:hover,
-.ui-datepicker-prev:hover:after,
-.ui-datepicker-next:hover:after {
-  border-color: #5ed1cc;
-}
-.ui-datepicker-title {
-  text-align: center;
-}
-.ui-datepicker-calendar {
-  width: 100%;
-  text-align: center;
-}
-.ui-datepicker-calendar thead tr th span {
-  display: block;
-  width: 40px;
-  color: #00a8b2;
-  margin-bottom: 5px;
-  font-size: 13px;
-}
-.ui-state-default {
-  display: block;
-  text-decoration: none;
-  color: #b5b5b5;
-  line-height: 40px;
-  font-size: 12px;
-}
-.ui-state-default:hover {
-  background: rgba(0,0,0,0.02);
-}
-.ui-state-highlight {
-  color: #8dd391;
-}
-.ui-state-active {
-  color: #5ed1cc;
-}
-.ui-datepicker-unselectable .ui-state-default {
-  color: #eee;
-  border: 2px solid transparent;
-}
+    .dl-abdtp-view-label.dl-abdtp-up-button {
+      background: transparent;
 
+      font-style: normal;
+      font-weight: bold;
+      font-size: 14px;
+      line-height: 18px;
+      /* identical to box height */
+
+      text-align: center;
+      text-transform: uppercase;
+
+      color: #323C47;
+      span {
+        padding-left: 10px;
+      }
+    }
+
+    .dl-abdtp-right-button, .dl-abdtp-left-button {
+      background: transparent;
+    }
+    .dl-abdtp-day-view {
+      margin-top: 25px;
+    }
+    .align-items-center.no-gutters.dl-abdtp-col-label {
+      font-style: normal;
+      font-weight: bold;
+      font-size: 12px;
+      line-height: 15px;
+      text-align: center;
+      color: #707683;
+
+    }
+
+    .dl-abdtp-day-view>.no-gutters+div>div.no-gutters:first-of-type {
+      margin: 19px 0 24px;
+    }
+
+    .dl-abdtp-date-button.dl-abdtp-day {
+      padding: 13px 5px;
+      font-style: normal;
+      font-weight: normal;
+      font-size: 13px;
+      line-height: 16px;
+      /* identical to box height */
+
+      text-align: center;
+
+      color: #707683;
+
+      &.dl-abdtp-selected {
+        color: #fff;
+        font-weight: 600;
+      }
+
+      // .no-gutters .no-gutters {
+      //   margin: 19px 0 24px;
+      // }
+      &.dl-abdtp-past,
+      &.dl-abdtp-future {
+        color: #99ACB7;
+        mix-blend-mode: normal;
+        opacity: 0.4;
+      }
+    }
+  }
+}
