--- a/src/app/shared/modules/system-messages/system-messages.component.scss
+++ b/src/app/shared/modules/system-messages/system-messages.component.scss
@@ -1,78 +1,152 @@
 .notifications {
-    margin-right: 30px;
-    position: relative;
-    mat-icon {
-        color: #fff;
-        cursor: pointer;
-        outline: none;
-        &.active{
-        span {
-            display: block;
-            color: transparent;
-            width: 8px;
-            height: 8px;
-            border: 1px solid #ffffff;
-            right: -5px;
-            top: -5px;
-        }
-        }
-        span {
-        display: none;
-        }
+  margin-right: 30px;
+  position: relative;
+  mat-icon {
+    color: #fff;
+    cursor: pointer;
+    outline: none;
+    &.active{
+      &::after{
+        display: block;
+      }
     }
+    &:after{
+      position: absolute;
+      display: none;
+      content: "";
+      width: 8px;
+      height: 8px;
+      background: #5ddfab;
+      border-radius: 50%;
+      left: 80%;
+      top: -40%;
+      transform: translate(50%, 50%);
+    }
+  }
 }
 
 .notifications-wrapp{
-    // display: none;
+  // display: none;
+  position: absolute;
+  z-index: 9;
+  top: 40px;
+  right: -20px;
+  width: 395px;
+  height: auto;
+  max-height: 700px;
+  // overflow: hidden;
+  background-color: #ffffff;
+  box-shadow: 0px 15px 21px rgba(128, 152, 213, 0.5);
+  border-radius: 8px;
+  border: 1px solid #F4F7FC;
+  &::after{
+    content: "";
+    background-color: #fff;
+    border-top: 1px solid #F4F7FC;
+    border-right: 1px solid #F4F7FC;
+    transform: rotate(45deg);
+    height: 20px;
+    width: 20px;
+    top: -10px;
+    right: 20px;
     position: absolute;
     z-index: 9;
-    top: 30px;
-    right: -20px;
-    width: 395px;
-    height: 800px;
-  
-    background-color: #ffffff;
-    box-shadow: 0px 15px 21px rgba(128, 152, 213, 0.5);
-    border-radius: 8px;
-    border: 1px solid red;
-    .notifications-title{
-      font-size: 16px;
-      line-height: 150%;
-      color: #33596E;
-      opacity: 0.5;
-      padding: 16px;
+  }
+  .notifications-title{
+    font-size: 16px;
+    line-height: 150%;
+    color: #33596E;
+    opacity: 0.5;
+    padding: 16px;
+    cursor: pointer;
+    // border-bottom: 1px solid #F4F7FC;
+    box-sizing: border-box;
+  }
+  .notifications-list{
+    font-family: 'Source Sans Pro';
+    overflow: scroll;
+    max-height: 500px;
+    padding-right: 0px;
+    margin-right: 4px;
+  }
+  .notification-item{
+    display: flex;
+    flex-wrap: wrap;
+    padding: 10px 45px 6px 0;
+    box-sizing: border-box;
+    border-bottom: 1px solid #F4F7FC;
+    position: relative;
+    &:first-child{
+      border-top: 1px solid #F4F7FC;;
+    }
+    &:last-child{
+      border-bottom: none;
+    }
+  }
+  .notification-item__icon{
+    width: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    img{
+      margin-top: 0px;
+      max-width: 95%;
+      position: relative;
+      top: -5px;
+    }
+  }
+  .notification-item__text{
+    width: calc(100% - 50px);
+    font-size: 16px;
+    line-height: 131%;
+    letter-spacing: 0.1px;
+    color: #323C47;
+    span{
+      color: #3C7EEA;
       cursor: pointer;
-      border-bottom: 1px solid #F4F7FC;
+      font-weight: 600;
     }
-    .notifications-list{
-      font-family: 'Source Sans Pro';
+  }
+  .notification-item__date{
+    margin-left: 50px;    
+    font-size: 14px;
+    line-height: 171%;
+    color: #33596E;
+    opacity: 0.5;
+  }
+  .notification-delet{
+    position: absolute;
+    top: 13px;
+    right: 17px;
+    width: 19px;
+    height: 19px;
+    background-color: transparent;
+    cursor: pointer;
+    &::before, &::after{
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      content: "";
+      height: 1px;
+      width: 16px;
+      background-color: #BFC5D1;
     }
-    .notification-item{
-      display: flex;
-      flex-wrap: wrap;
-      padding: 10px 45px 6px 0;
-      box-sizing: border-box;
-      border-bottom: 1px solid #F4F7FC;
+    &::before{
+      transform: translate(-50%, -50%) rotate(45deg);
     }
-    .notification-item__icon{
-      width: 50px;
-      display: flex;
-      justify-content: center;
-      align-items: flex-start;
+    &::after{
+      transform: translate(-50%, -50%) rotate(-45deg);
     }
-    .notification-item__text{
-      width: calc(100% - 50px);
-      font-size: 16px;
-      line-height: 131%;
-      letter-spacing: 0.1px;
-      color: #323C47;
-      span{}
-    }
-    .notification-item__date{
-      margin-left: 50px;    
-      font-size: 14px;
-      line-height: 171%;
-      color: #33596E;
-      opacity: 0.5;
-    }
+  }
+  .emptyList{
+    display: block;
+    font-size: 18px;
+    line-height: 150%;
+    color: #33596E;
+    opacity: 0.5;
+    padding: 16px;
+    box-sizing: border-box;
+    text-align: center;
+    margin: 0 auto;
+  }
 }
